# galadecode

./: ChangeLog  INSTALL  README  configure.ac
src/: Makefile.am  galadecode.c  version.c.in
